--- a/Shopping_Buy_All/Shopping_Buy_All/Reportes/Ventanas_Reportes/ReportesProductos/ReportProductos.rdlc
+++ b/Shopping_Buy_All/Shopping_Buy_All/Reportes/Ventanas_Reportes/ReportesProductos/ReportProductos.rdlc
@@ -114,7 +114,7 @@
               <Paragraph>
                 <TextRuns>
                   <TextRun>
-                    <Value>Reporte de Usuarios</Value>
+                    <Value>Reporte de Productos</Value>
                     <Style>
                       <FontSize>20pt</FontSize>
                       <FontWeight>Bold</FontWeight>
