--- a/Shopping_Buy_All/Shopping_Buy_All/Estadisticas/Ventanas_Estadisticas/EstadisticasFacturacion/EstadisticaFacturacion.rdlc
+++ b/Shopping_Buy_All/Shopping_Buy_All/Estadisticas/Ventanas_Estadisticas/EstadisticasFacturacion/EstadisticaFacturacion.rdlc
@@ -59,6 +59,26 @@
         <rd:TableAdapterName />
       </rd:DataSetInfo>
     </DataSet>
+    <DataSet Name="DatoFacturasTotales">
+      <Query>
+        <DataSourceName>EstadisticasFacturacion</DataSourceName>
+        <CommandText>/* Local Query */</CommandText>
+      </Query>
+      <Fields>
+        <Field Name="Cantidad">
+          <DataField>Cantidad</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+      </Fields>
+      <rd:DataSetInfo>
+        <rd:DataSetName>EstadisticasFacturacion</rd:DataSetName>
+        <rd:SchemaPath>G:\Documentos\PAV\Pav_TPI\Shopping_Buy_All\Shopping_Buy_All\Estadisticas\Ventanas_Estadisticas\EstadisticasFacturacion\EstadisticasFacturacion.xsd</rd:SchemaPath>
+        <rd:TableName>FacturasTotales</rd:TableName>
+        <rd:TableAdapterFillMethod />
+        <rd:TableAdapterGetDataMethod />
+        <rd:TableAdapterName />
+      </rd:DataSetInfo>
+    </DataSet>
   </DataSets>
   <ReportSections>
     <ReportSection>
